support ws demo
